--- a/clean_data.ipynb
+++ b/clean_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 1,
    "id": "318c14da",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 2,
    "id": "fe72ecfe",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 3,
    "id": "0ac41552",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 4,
    "id": "d065177e",
    "metadata": {},
    "outputs": [],
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 5,
    "id": "f4321ffe",
    "metadata": {},
    "outputs": [],
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 6,
    "id": "6216042b",
    "metadata": {},
    "outputs": [],
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 7,
    "id": "1041e417",
    "metadata": {},
    "outputs": [],
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 8,
    "id": "85048a7c",
    "metadata": {},
    "outputs": [],
@@ -304,6 +304,86 @@
   },
   {
    "cell_type": "markdown",
+   "id": "273544a0",
+   "metadata": {},
+   "source": [
+    "## Eliminate Outliner"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "39c5ddd1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def eliminate_outliers(df, cols=\"all_numeric\", method=\"iqr_cap\",\n",
+    "                       factor=1.5, inplace=False, print_info=True):\n",
+    "    \"\"\"\n",
+    "    Remove or cap outliers using the IQR method.\n",
+    "\n",
+    "    Parameters:\n",
+    "    - df: pandas DataFrame\n",
+    "    - cols: list-like of column names, or \"all_numeric\" to apply on all numeric columns\n",
+    "    - method: \"iqr_cap\" = truncate values, \"iqr_remove\" = remove rows\n",
+    "    - factor: IQR multiplier (default 1.5)\n",
+    "    - inplace: modify df in-place if True\n",
+    "    - print_info: print summary for each column\n",
+    "\n",
+    "    Returns:\n",
+    "    - DataFrame with outliers handled\n",
+    "    \"\"\"\n",
+    "\n",
+    "    if not inplace:\n",
+    "        df = df.copy()\n",
+    "\n",
+    "    # Automatically select numeric columns\n",
+    "    if cols == \"all_numeric\":\n",
+    "        cols = df.select_dtypes(include=\"number\").columns.tolist()\n",
+    "\n",
+    "    else:\n",
+    "        cols = list(cols)\n",
+    "\n",
+    "    # Check existence\n",
+    "    for col in cols:\n",
+    "        if col not in df.columns:\n",
+    "            raise KeyError(f\"Column '{col}' not found in DataFrame.\")\n",
+    "\n",
+    "    # Process each column\n",
+    "    for col in cols:\n",
+    "        if not pd.api.types.is_numeric_dtype(df[col]):\n",
+    "            if print_info:\n",
+    "                print(f\"Skipping non-numeric column: {col}\")\n",
+    "            continue\n",
+    "\n",
+    "        Q1 = df[col].quantile(0.25)\n",
+    "        Q3 = df[col].quantile(0.75)\n",
+    "        IQR = Q3 - Q1\n",
+    "\n",
+    "        lower = Q1 - factor * IQR\n",
+    "        upper = Q3 + factor * IQR\n",
+    "\n",
+    "        if method == \"iqr_cap\":\n",
+    "            df[col] = df[col].clip(lower, upper)\n",
+    "\n",
+    "        elif method == \"iqr_remove\":\n",
+    "            df = df[(df[col] >= lower) & (df[col] <= upper)]\n",
+    "\n",
+    "        else:\n",
+    "            raise ValueError(\"method must be 'iqr_cap' or 'iqr_remove'\")\n",
+    "\n",
+    "        if print_info:\n",
+    "            print(f\"[{col}]\")\n",
+    "            print(f\"  Q1 = {Q1:.4f}, Q3 = {Q3:.4f}, IQR = {IQR:.4f}\")\n",
+    "            print(f\"  lower = {lower:.4f}, upper = {upper:.4f}\")\n",
+    "            print(f\"  method = {method}\")\n",
+    "            print(\"----------------------------------------------------\")\n",
+    "\n",
+    "    return df\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6d0ca16c",
    "metadata": {},
    "source": [
@@ -312,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 10,
    "id": "bf2f7804",
    "metadata": {},
    "outputs": [],
@@ -327,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 11,
    "id": "7fdc55b1",
    "metadata": {},
    "outputs": [
@@ -337,7 +417,7 @@
        "np.int64(8771)"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 12,
    "id": "3f562a41",
    "metadata": {},
    "outputs": [
@@ -620,7 +700,62 @@
       "timestamp: before 785612 -> after 785611\n",
       "----------------------------------------\n",
       "last_activity: before 785611 -> after 785610\n",
-      "----------------------------------------\n"
+      "----------------------------------------\n",
+      "[count_reopen]\n",
+      "  Q1 = 0.0000, Q3 = 0.0000, IQR = 0.0000\n",
+      "  lower = 0.0000, upper = 0.0000\n",
+      "  method = iqr_cap\n",
+      "----------------------------------------------------\n",
+      "[state_กำลังดำเนินการ]\n",
+      "  Q1 = 0.0000, Q3 = 0.0000, IQR = 0.0000\n",
+      "  lower = 0.0000, upper = 0.0000\n",
+      "  method = iqr_cap\n",
+      "----------------------------------------------------\n",
+      "[state_รอรับเรื่อง]\n",
+      "  Q1 = 0.0000, Q3 = 0.0000, IQR = 0.0000\n",
+      "  lower = 0.0000, upper = 0.0000\n",
+      "  method = iqr_cap\n",
+      "----------------------------------------------------\n",
+      "[state_เสร็จสิ้น]\n",
+      "  Q1 = 1.0000, Q3 = 1.0000, IQR = 0.0000\n",
+      "  lower = 1.0000, upper = 1.0000\n",
+      "  method = iqr_cap\n",
+      "----------------------------------------------------\n",
+      "[star_1.0]\n",
+      "  Q1 = 0.0000, Q3 = 0.0000, IQR = 0.0000\n",
+      "  lower = 0.0000, upper = 0.0000\n",
+      "  method = iqr_cap\n",
+      "----------------------------------------------------\n",
+      "[star_2.0]\n",
+      "  Q1 = 0.0000, Q3 = 0.0000, IQR = 0.0000\n",
+      "  lower = 0.0000, upper = 0.0000\n",
+      "  method = iqr_cap\n",
+      "----------------------------------------------------\n",
+      "[star_3.0]\n",
+      "  Q1 = 0.0000, Q3 = 0.0000, IQR = 0.0000\n",
+      "  lower = 0.0000, upper = 0.0000\n",
+      "  method = iqr_cap\n",
+      "----------------------------------------------------\n",
+      "[star_4.0]\n",
+      "  Q1 = 0.0000, Q3 = 0.0000, IQR = 0.0000\n",
+      "  lower = 0.0000, upper = 0.0000\n",
+      "  method = iqr_cap\n",
+      "----------------------------------------------------\n",
+      "[star_5.0]\n",
+      "  Q1 = 0.0000, Q3 = 0.0000, IQR = 0.0000\n",
+      "  lower = 0.0000, upper = 0.0000\n",
+      "  method = iqr_cap\n",
+      "----------------------------------------------------\n",
+      "[star_nan]\n",
+      "  Q1 = 0.0000, Q3 = 1.0000, IQR = 1.0000\n",
+      "  lower = -1.5000, upper = 2.5000\n",
+      "  method = iqr_cap\n",
+      "----------------------------------------------------\n",
+      "[solve_days]\n",
+      "  Q1 = 1.0000, Q3 = 71.0000, IQR = 70.0000\n",
+      "  lower = -104.0000, upper = 176.0000\n",
+      "  method = iqr_cap\n",
+      "----------------------------------------------------\n"
      ]
     }
    ],
@@ -665,7 +800,10 @@
     "df = safe_parse_datetime(df, 'last_activity', fmt)\n",
     "\n",
     "# 9.) new Column Solve date\n",
-    "df['solve_days'] = (df['last_activity'] - df['timestamp']).dt.days"
+    "df['solve_days'] = (df['last_activity'] - df['timestamp']).dt.days\n",
+    "\n",
+    "# 10.) eliminate outliner\n",
+    "df = eliminate_outliers(df, cols=\"all_numeric\")"
    ]
   },
   {
