split coords & add logs

--- a/clean_data.ipynb
+++ b/clean_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "id": "318c14da",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "fe72ecfe",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "id": "0ac41552",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "id": "d065177e",
    "metadata": {},
    "outputs": [],
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "id": "f4321ffe",
    "metadata": {},
    "outputs": [],
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "id": "6216042b",
    "metadata": {},
    "outputs": [],
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "id": "1041e417",
    "metadata": {},
    "outputs": [],
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "id": "85048a7c",
    "metadata": {},
    "outputs": [],
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "id": "39c5ddd1",
    "metadata": {},
    "outputs": [],
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "id": "bf2f7804",
    "metadata": {},
    "outputs": [],
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "id": "7fdc55b1",
    "metadata": {},
    "outputs": [
@@ -417,7 +417,7 @@
        "np.int64(8771)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "id": "3f562a41",
    "metadata": {},
    "outputs": [
@@ -681,15 +681,22 @@
       "last_activity         0\n",
       "dtype: int64\n",
       "----------------------------------------\n",
+      "Removed 8771 duplicate ticket_id rows (kept last).\n",
+      "----------------------------------------------------\n",
       "before: 787026  ->  after: 785662\n",
       "----------------------------------------\n",
       "Dropped 50 rows with NaN in ['district', 'subdistrict'] (before: 785662, after: 785612)\n",
       "----------------------------------------\n",
+      "drop_columns size before (785612, 16)\n",
+      "Dropped columns (returned new df): ['photo', 'photo_after', 'ticket_id']\n",
+      "----------------------------------------\n",
+      "drop_columns size after (785612, 13)\n",
+      "----------------------------------------------------\n",
       "One-hot encoding columns: ['state', 'star']\n",
       "drop_first=False, inplace=False, return_encoder=False\n",
       "Using OneHotEncoder API variant: sparse_output\n",
       "Generated 9 columns, first 10: ['state_กำลังดำเนินการ', 'state_รอรับเรื่อง', 'state_เสร็จสิ้น', 'star_1.0', 'star_2.0', 'star_3.0', 'star_4.0', 'star_5.0', 'star_nan']\n",
-      "Shape before: (785612, 16) -> after: (785612, 23)\n",
+      "Shape before: (785612, 13) -> after: (785612, 20)\n",
       "----------------------------------------\n",
       "✔ comment: filled 8700 with 'ไม่มีคำอธิบาย'\n",
       "----------------------------------------\n",
@@ -751,6 +758,16 @@
       "  lower = -1.5000, upper = 2.5000\n",
       "  method = iqr_cap\n",
       "----------------------------------------------------\n",
+      "[lon]\n",
+      "  Q1 = 100.5042, Q3 = 100.6210, IQR = 0.1168\n",
+      "  lower = 100.3290, upper = 100.7961\n",
+      "  method = iqr_cap\n",
+      "----------------------------------------------------\n",
+      "[lat]\n",
+      "  Q1 = 13.7170, Q3 = 13.7978, IQR = 0.0808\n",
+      "  lower = 13.5958, upper = 13.9190\n",
+      "  method = iqr_cap\n",
+      "----------------------------------------------------\n",
       "[solve_days]\n",
       "  Q1 = 1.0000, Q3 = 71.0000, IQR = 70.0000\n",
       "  lower = -104.0000, upper = 176.0000\n",
@@ -764,7 +781,9 @@
     "inspect_dataframe(df)\n",
     "\n",
     "# 1.) remove duplicates ID by keep last\n",
-    "df2 = df.drop_duplicates(subset='ticket_id', keep='last') \n",
+    "df2 = df.drop_duplicates(subset='ticket_id', keep='last')\n",
+    "print(f\"Removed {len(df) - len(df2)} duplicate ticket_id rows (kept last).\")\n",
+    "print(\"----------------------------------------------------\")\n",
     "\n",
     "# 2.) filter bangkok in province\n",
     "df = filter_bangkok(df)\n",
@@ -772,8 +791,11 @@
     "# 3.) drop rows with nan\n",
     "df = drop_rows_with_nan(df, [\"district\", \"subdistrict\"])\n",
     "\n",
-    "# ?4.) drop columns that not use\n",
-    "# df = drop_columns(df, [\"photo\",\"photo_after\",\"ticket_id\"])\n",
+    "# 4.) drop columns that not use\n",
+    "print(\"drop_columns size before\", df.shape)\n",
+    "df = drop_columns(df, [\"photo\",\"photo_after\",\"ticket_id\"])\n",
+    "print(\"drop_columns size after\", df.shape)\n",
+    "print(\"----------------------------------------------------\")\n",
     "\n",
     "# 5.1) One hot\n",
     "df = one_hot_encode_sklearn(df, ['state','star'])\n",
@@ -791,8 +813,8 @@
     "                    [\"comment\",\"organization\",\"type\"], \n",
     "                    [\"ไม่มีคำอธิบาย\",\"ไม่ระบุหน่วยงาน\",\"ไม่ระบุ\"])\n",
     "\n",
-    "# ?7.) split coords to lon and lat\n",
-    "# df[['lon','lat']] = df['coords'].str.split(',', expand=True).astype(float)\n",
+    "# 7.) split coords to lon and lat\n",
+    "df[['lon','lat']] = df['coords'].str.split(',', expand=True).astype(float)\n",
     "\n",
     "# 8.) Convert timestamp และ last_activity เป็น datetime\n",
     "fmt = \"%Y-%m-%d %H:%M:%S.%f%z\"\n",
@@ -809,7 +831,38 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1fdde5d5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "2aaf73be",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(785610, 23)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape\n",
+    "# before : Loaded 787,026 rows × 16 columns\n",
+    "# after : Loaded 786,000 rows × 13 columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e843c5de",
    "metadata": {},
    "outputs": [],
    "source": []
