--- a/clean_data.ipynb
+++ b/clean_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 40,
    "id": "318c14da",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 41,
    "id": "fe72ecfe",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 42,
    "id": "0ac41552",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 43,
    "id": "d065177e",
    "metadata": {},
    "outputs": [],
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 44,
    "id": "f4321ffe",
    "metadata": {},
    "outputs": [],
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 45,
    "id": "6216042b",
    "metadata": {},
    "outputs": [],
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 46,
    "id": "1041e417",
    "metadata": {},
    "outputs": [],
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 47,
    "id": "85048a7c",
    "metadata": {},
    "outputs": [],
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 48,
    "id": "39c5ddd1",
    "metadata": {},
    "outputs": [],
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 49,
    "id": "bf2f7804",
    "metadata": {},
    "outputs": [],
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 50,
    "id": "7fdc55b1",
    "metadata": {},
    "outputs": [
@@ -417,7 +417,7 @@
        "np.int64(8771)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 51,
    "id": "3f562a41",
    "metadata": {},
    "outputs": [
@@ -825,16 +825,8 @@
     "df['solve_days'] = (df['last_activity'] - df['timestamp']).dt.days\n",
     "\n",
     "# 10.) eliminate outliner\n",
-    "df = eliminate_outliers(df, cols=\"all_numeric\")"
+    "df = eliminate_outliers(df, cols=\"all_numeric\", method=\"iqr_cap\", factor=1.5)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1fdde5d5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -848,7 +840,7 @@
        "(785610, 23)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -856,16 +848,9 @@
    "source": [
     "df.shape\n",
     "# before : Loaded 787,026 rows × 16 columns\n",
-    "# after : Loaded 786,000 rows × 13 columns"
+    "# Truncate Outliers after : Loaded 785,610 rows × 23 columns\n",
+    "# Remove Outliners after : Loaded 392,070 rows × 23 columns"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e843c5de",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
