--- a/clean_data.ipynb
+++ b/clean_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "id": "318c14da",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "id": "fe72ecfe",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "id": "0ac41552",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "id": "d065177e",
    "metadata": {},
    "outputs": [],
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "id": "f4321ffe",
    "metadata": {},
    "outputs": [],
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "id": "6216042b",
    "metadata": {},
    "outputs": [],
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "id": "1041e417",
    "metadata": {},
    "outputs": [],
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "id": "85048a7c",
    "metadata": {},
    "outputs": [],
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "id": "39c5ddd1",
    "metadata": {},
    "outputs": [],
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 10,
    "id": "bf2f7804",
    "metadata": {},
    "outputs": [],
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 11,
    "id": "7fdc55b1",
    "metadata": {},
    "outputs": [
@@ -417,7 +417,7 @@
        "np.int64(8771)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 12,
    "id": "3f562a41",
    "metadata": {},
    "outputs": [
@@ -698,6 +698,8 @@
       "Generated 9 columns, first 10: ['state_กำลังดำเนินการ', 'state_รอรับเรื่อง', 'state_เสร็จสิ้น', 'star_1.0', 'star_2.0', 'star_3.0', 'star_4.0', 'star_5.0', 'star_nan']\n",
       "Shape before: (785612, 13) -> after: (785612, 20)\n",
       "----------------------------------------\n",
+      "Dropped columns (returned new df): ['star_nan']\n",
+      "----------------------------------------\n",
       "✔ comment: filled 8700 with 'ไม่มีคำอธิบาย'\n",
       "----------------------------------------\n",
       "✔ organization: filled 117 with 'ไม่ระบุหน่วยงาน'\n",
@@ -708,69 +710,14 @@
       "----------------------------------------\n",
       "last_activity: before 785611 -> after 785610\n",
       "----------------------------------------\n",
-      "[count_reopen]\n",
-      "  Q1 = 0.0000, Q3 = 0.0000, IQR = 0.0000\n",
-      "  lower = 0.0000, upper = 0.0000\n",
-      "  method = iqr_cap\n",
-      "----------------------------------------------------\n",
-      "[state_กำลังดำเนินการ]\n",
-      "  Q1 = 0.0000, Q3 = 0.0000, IQR = 0.0000\n",
-      "  lower = 0.0000, upper = 0.0000\n",
-      "  method = iqr_cap\n",
-      "----------------------------------------------------\n",
-      "[state_รอรับเรื่อง]\n",
-      "  Q1 = 0.0000, Q3 = 0.0000, IQR = 0.0000\n",
-      "  lower = 0.0000, upper = 0.0000\n",
-      "  method = iqr_cap\n",
-      "----------------------------------------------------\n",
-      "[state_เสร็จสิ้น]\n",
-      "  Q1 = 1.0000, Q3 = 1.0000, IQR = 0.0000\n",
-      "  lower = 1.0000, upper = 1.0000\n",
-      "  method = iqr_cap\n",
-      "----------------------------------------------------\n",
-      "[star_1.0]\n",
-      "  Q1 = 0.0000, Q3 = 0.0000, IQR = 0.0000\n",
-      "  lower = 0.0000, upper = 0.0000\n",
-      "  method = iqr_cap\n",
-      "----------------------------------------------------\n",
-      "[star_2.0]\n",
-      "  Q1 = 0.0000, Q3 = 0.0000, IQR = 0.0000\n",
-      "  lower = 0.0000, upper = 0.0000\n",
-      "  method = iqr_cap\n",
-      "----------------------------------------------------\n",
-      "[star_3.0]\n",
-      "  Q1 = 0.0000, Q3 = 0.0000, IQR = 0.0000\n",
-      "  lower = 0.0000, upper = 0.0000\n",
-      "  method = iqr_cap\n",
-      "----------------------------------------------------\n",
-      "[star_4.0]\n",
-      "  Q1 = 0.0000, Q3 = 0.0000, IQR = 0.0000\n",
-      "  lower = 0.0000, upper = 0.0000\n",
-      "  method = iqr_cap\n",
-      "----------------------------------------------------\n",
-      "[star_5.0]\n",
-      "  Q1 = 0.0000, Q3 = 0.0000, IQR = 0.0000\n",
-      "  lower = 0.0000, upper = 0.0000\n",
-      "  method = iqr_cap\n",
-      "----------------------------------------------------\n",
-      "[star_nan]\n",
-      "  Q1 = 0.0000, Q3 = 1.0000, IQR = 1.0000\n",
-      "  lower = -1.5000, upper = 2.5000\n",
-      "  method = iqr_cap\n",
-      "----------------------------------------------------\n",
-      "[lon]\n",
-      "  Q1 = 100.5042, Q3 = 100.6210, IQR = 0.1168\n",
-      "  lower = 100.3290, upper = 100.7961\n",
-      "  method = iqr_cap\n",
-      "----------------------------------------------------\n",
-      "[lat]\n",
-      "  Q1 = 13.7170, Q3 = 13.7978, IQR = 0.0808\n",
-      "  lower = 13.5958, upper = 13.9190\n",
-      "  method = iqr_cap\n",
-      "----------------------------------------------------\n",
       "[solve_days]\n",
       "  Q1 = 1.0000, Q3 = 71.0000, IQR = 70.0000\n",
       "  lower = -104.0000, upper = 176.0000\n",
+      "  method = iqr_cap\n",
+      "----------------------------------------------------\n",
+      "[count_reopen]\n",
+      "  Q1 = 0.0000, Q3 = 0.0000, IQR = 0.0000\n",
+      "  lower = 0.0000, upper = 0.0000\n",
       "  method = iqr_cap\n",
       "----------------------------------------------------\n"
      ]
@@ -799,6 +746,7 @@
     "\n",
     "# 5.1) One hot\n",
     "df = one_hot_encode_sklearn(df, ['state','star'])\n",
+    "df = drop_columns(df, [\"star_nan\"])\n",
     "#? df = one_hot_encode_sklearn(df, [\"organization\"])\n",
     "\n",
     "# ?5.2) One hot of type\n",
@@ -825,22 +773,22 @@
     "df['solve_days'] = (df['last_activity'] - df['timestamp']).dt.days\n",
     "\n",
     "# 10.) eliminate outliner\n",
-    "df = eliminate_outliers(df, cols=\"all_numeric\", method=\"iqr_cap\", factor=1.5)"
+    "df = eliminate_outliers(df, cols=[\"solve_days\",\"count_reopen\"], method=\"iqr_cap\", factor=1.5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "2aaf73be",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(785610, 23)"
+       "(785610, 22)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
