--- a/clean_data.ipynb
+++ b/clean_data.ipynb
@@ -778,6 +778,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "c9ffe5af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"clean_data.csv\", index=False, encoding=\"utf-8-sig\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "id": "2aaf73be",
    "metadata": {},
