--- a/clean_data.ipynb
+++ b/clean_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 152,
    "id": "318c14da",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 153,
    "id": "fe72ecfe",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 154,
    "id": "0ac41552",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 155,
    "id": "d065177e",
    "metadata": {},
    "outputs": [],
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 156,
    "id": "f4321ffe",
    "metadata": {},
    "outputs": [],
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 157,
    "id": "6216042b",
    "metadata": {},
    "outputs": [],
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 158,
    "id": "1041e417",
    "metadata": {},
    "outputs": [],
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 159,
    "id": "85048a7c",
    "metadata": {},
    "outputs": [],
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 160,
    "id": "39c5ddd1",
    "metadata": {},
    "outputs": [],
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 161,
    "id": "bf2f7804",
    "metadata": {},
    "outputs": [],
@@ -402,33 +402,12 @@
     "if not path.exists():\n",
     "    raise FileNotFoundError(f\"{path} not found in {Path.cwd()}\")\n",
     "\n",
-    "df = pd.read_csv(path)"
+    "df_raw = pd.read_csv(path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "7fdc55b1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "np.int64(8771)"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['ticket_id'].duplicated().sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 162,
    "id": "3f562a41",
    "metadata": {},
    "outputs": [
@@ -709,21 +688,13 @@
       "timestamp: before 785612 -> after 785611\n",
       "----------------------------------------\n",
       "last_activity: before 785611 -> after 785610\n",
-      "----------------------------------------\n",
-      "[solve_days]\n",
-      "  Q1 = 1.0000, Q3 = 71.0000, IQR = 70.0000\n",
-      "  lower = -104.0000, upper = 176.0000\n",
-      "  method = iqr_cap\n",
-      "----------------------------------------------------\n",
-      "[count_reopen]\n",
-      "  Q1 = 0.0000, Q3 = 0.0000, IQR = 0.0000\n",
-      "  lower = 0.0000, upper = 0.0000\n",
-      "  method = iqr_cap\n",
-      "----------------------------------------------------\n"
+      "----------------------------------------\n"
      ]
     }
    ],
    "source": [
+    "df = df_raw.copy()  # work on a copy to keep raw data intact\n",
+    "\n",
     "# 0.) inspect\n",
     "inspect_dataframe(df)\n",
     "\n",
@@ -770,40 +741,221 @@
     "df = safe_parse_datetime(df, 'last_activity', fmt)\n",
     "\n",
     "# 9.) new Column Solve date\n",
-    "df['solve_days'] = (df['last_activity'] - df['timestamp']).dt.days\n",
+    "df['solve_days'] = (df['last_activity'] - df['timestamp']).dt.days"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "id": "c9ffe5af",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[solve_days] mean=73.9108, Q1=1.0000, Q3=71.0000, IQR=70.0000, lower=0.0000, upper=211.0000\n",
+      "=== ASCENDING SORT ===\n",
+      "        solve_days\n",
+      "295920          -1\n",
+      "367246          -1\n",
+      "410774          -1\n",
+      "528415          -1\n",
+      "534478          -1\n",
+      "...            ...\n",
+      "786684           0\n",
+      "340              0\n",
+      "786715           0\n",
+      "786714           0\n",
+      "786713           0\n",
+      "\n",
+      "[300 rows x 1 columns]\n",
+      "=== DESCENDING SORT ===\n",
+      "       solve_days\n",
+      "7            1073\n",
+      "61           1046\n",
+      "29           1021\n",
+      "52           1008\n",
+      "96           1006\n",
+      "77           1004\n",
+      "67            992\n",
+      "110           970\n",
+      "166           962\n",
+      "380           961\n",
+      "136           956\n",
+      "3260          956\n",
+      "832           955\n",
+      "879           955\n",
+      "1545          954\n",
+      "1694          953\n",
+      "8624          952\n",
+      "8623          952\n",
+      "12415         952\n",
+      "8622          952\n",
+      "count of non-NaN values: 785610\n",
+      "number of col over 211.0000:  99586\n",
+      "Before eliminating outliers 785610\n",
+      "After eliminating outliers 685891\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 10.1) eliminate outliner : solve_days\n",
+    "col = \"solve_days\"\n",
     "\n",
-    "# 10.) eliminate outliner\n",
-    "df = eliminate_outliers(df, cols=[\"solve_days\",\"count_reopen\"], method=\"iqr_cap\", factor=1.5)"
+    "mean_val = df[col].mean()\n",
+    "Q1 = df[col].quantile(0.25)\n",
+    "Q3 = df[col].quantile(0.75)\n",
+    "IQR = Q3 - Q1\n",
+    "lower = 0\n",
+    "upper = Q3 + 2 * IQR\n",
+    "print(f\"[{col}] mean={mean_val:.4f}, Q1={Q1:.4f}, Q3={Q3:.4f}, IQR={IQR:.4f}, lower={lower:.4f}, upper={upper:.4f}\")\n",
+    "df_asc = df.sort_values(by=col, ascending=True)\n",
+    "print(\"=== ASCENDING SORT ===\")\n",
+    "print(df_asc[[col]].head(300))   # log 300 rows แรก\n",
+    "df_desc = df.sort_values(by=col, ascending=False)\n",
+    "print(\"=== DESCENDING SORT ===\")\n",
+    "print(df_desc[[col]].head(20))  # log 20 rows แรก\n",
+    "print(\"count of non-NaN values:\", df[col].count())\n",
+    "print(f\"number of col over {upper:.4f}: \", (df[col] > upper).sum())\n",
+    "\n",
+    "print(\"Before eliminating outliers\", df[col].count())\n",
+    "df = df[(df[col] >= lower) & (df[col] <= upper)]\n",
+    "print(\"After eliminating outliers\", df[col].count())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "id": "2ef14425",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[count_reopen] mean=0.1128, Q1=0.0000, Q3=0.0000, IQR=0.0000, lower=0.0000, upper=2.0000\n",
+      "count count_reopen not a 0 & na :  43696 mean not a 0 & na :  1.7699331746612963\n",
+      "=== ASCENDING SORT ===\n",
+      "     count_reopen\n",
+      "49              0\n",
+      "55              0\n",
+      "56              0\n",
+      "70              0\n",
+      "80              0\n",
+      "..            ...\n",
+      "646             0\n",
+      "647             0\n",
+      "648             0\n",
+      "649             0\n",
+      "650             0\n",
+      "\n",
+      "[300 rows x 1 columns]\n",
+      "=== DESCENDING SORT ===\n",
+      "        count_reopen\n",
+      "670683            67\n",
+      "624874            65\n",
+      "304095            65\n",
+      "340128            61\n",
+      "247441            59\n",
+      "660043            58\n",
+      "694861            58\n",
+      "659926            57\n",
+      "315620            53\n",
+      "653762            47\n",
+      "346084            45\n",
+      "327611            45\n",
+      "295728            44\n",
+      "272219            43\n",
+      "326695            43\n",
+      "167540            42\n",
+      "287463            41\n",
+      "671731            41\n",
+      "704230            39\n",
+      "345165            39\n",
+      "count of non-NaN values: 685891\n",
+      "number of col over 2.0000:  6120\n",
+      "Before eliminating outliers 685891\n",
+      "0 2\n",
+      "After eliminating outliers 679771\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 10.2) eliminate outliner : count_reopen\n",
+    "col = \"count_reopen\"\n",
+    "\n",
+    "mean_val = df[col].mean()\n",
+    "Q1 = df[col].quantile(0.25)\n",
+    "Q3 = df[col].quantile(0.75)\n",
+    "IQR = Q3 - Q1\n",
+    "lower = 0\n",
+    "upper = 2\n",
+    "print(f\"[{col}] mean={mean_val:.4f}, Q1={Q1:.4f}, Q3={Q3:.4f}, IQR={IQR:.4f}, lower={lower:.4f}, upper={upper:.4f}\")\n",
+    "print(f\"count {col} not a 0 & na : \", (df[col].ne(0) & df[col].notna()).sum(), f\"mean not a 0 & na : \", (df.loc[df[col].ne(0) & df[col].notna(), col].mean()))\n",
+    "\n",
+    "df_asc = df.sort_values(by=col, ascending=True)\n",
+    "print(\"=== ASCENDING SORT ===\")\n",
+    "print(df_asc[[col]].head(300))   # log 300 rows แรก\n",
+    "df_desc = df.sort_values(by=col, ascending=False)\n",
+    "print(\"=== DESCENDING SORT ===\")\n",
+    "print(df_desc[[col]].head(20))  # log 20 rows แรก\n",
+    "print(\"count of non-NaN values:\", df[col].count())\n",
+    "print(f\"number of col over {upper:.4f}: \", (df[col] > upper).sum())\n",
+    "\n",
+    "print(\"Before eliminating outliers\", df[col].count())\n",
+    "print(lower, upper)\n",
+    "df = df[(df[col] >= lower) & (df[col] <= upper)]\n",
+    "print(\"After eliminating outliers\", df[col].count())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "id": "2aaf73be",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(679771, 22)"
+      ]
+     },
+     "execution_count": 165,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape\n",
+    "# before : Loaded 787,026 rows × 16 columns\n",
+    "# Truncate Outliers after : Loaded 785,610 rows × 23 columns\n",
+    "# Remove Outliners after : Loaded 392,070 rows × 23 columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "id": "2d0565a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load .csv\n",
+    "# df.to_csv(\"clean_data.csv\", index=False, encoding=\"utf-8-sig\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9ffe5af",
+   "id": "12236aab",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df.to_csv(\"clean_data.csv\", index=False, encoding=\"utf-8-sig\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "2aaf73be",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.shape\n",
-    "# before : Loaded 787,026 rows × 16 columns\n",
-    "# Truncate Outliers after : Loaded 785,610 rows × 23 columns\n",
-    "# Remove Outliners after : Loaded 392,070 rows × 23 columns\n",
-    "df.to_csv(\"clean_data.csv\", index=False, encoding=\"utf-8-sig\")"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "dsde-cedt",
    "language": "python",
    "name": "python3"
   },
@@ -817,7 +969,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
