--- a/clean_data.ipynb
+++ b/clean_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 16,
    "id": "318c14da",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 17,
    "id": "fe72ecfe",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 18,
    "id": "0ac41552",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 19,
    "id": "d065177e",
    "metadata": {},
    "outputs": [],
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 20,
    "id": "f4321ffe",
    "metadata": {},
    "outputs": [],
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 21,
    "id": "6216042b",
    "metadata": {},
    "outputs": [],
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 22,
    "id": "1041e417",
    "metadata": {},
    "outputs": [],
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 23,
    "id": "85048a7c",
    "metadata": {},
    "outputs": [],
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 24,
    "id": "39c5ddd1",
    "metadata": {},
    "outputs": [],
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 25,
    "id": "bf2f7804",
    "metadata": {},
    "outputs": [],
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 26,
    "id": "3f562a41",
    "metadata": {},
    "outputs": [
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 27,
    "id": "c9ffe5af",
    "metadata": {},
    "outputs": [
@@ -826,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 28,
    "id": "2ef14425",
    "metadata": {},
    "outputs": [
@@ -911,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 29,
    "id": "2aaf73be",
    "metadata": {},
    "outputs": [
@@ -921,7 +921,7 @@
        "(679771, 22)"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -935,13 +935,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 30,
    "id": "2d0565a7",
    "metadata": {},
    "outputs": [],
    "source": [
     "# load .csv\n",
-    "# df.to_csv(\"clean_data.csv\", index=False, encoding=\"utf-8-sig\")"
+    "df.to_csv(\"clean_data.csv\", index=False, encoding=\"utf-8-sig\")"
    ]
   },
   {
@@ -955,7 +955,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dsde-cedt",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -969,7 +969,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
