--- a/clean_data/clean_data_traffy.ipynb
+++ b/clean_data/clean_data_traffy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "318c14da",
    "metadata": {},
    "outputs": [],
@@ -955,7 +955,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "DSDE",
    "language": "python",
    "name": "python3"
   },
@@ -969,7 +969,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
