--- a/clean_data/clean_data_scarping.ipynb
+++ b/clean_data/clean_data_scarping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 1,
    "id": "a4d84e9e",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 2,
    "id": "145cc3ef",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 3,
    "id": "1c161710",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 4,
    "id": "b2398769",
    "metadata": {},
    "outputs": [],
@@ -155,6 +155,53 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d0a6115f",
+   "metadata": {},
+   "source": [
+    "## filter bangkok"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "966bc506",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def filter_bangkok(df, province_col=\"province\", show_removed=False):\n",
+    "    \"\"\"\n",
+    "    Keep only rows where province == 'Bangkok'.\n",
+    "    Logs before/after row counts.\n",
+    "    \"\"\"\n",
+    "    df = df.copy()\n",
+    "\n",
+    "    # Count before\n",
+    "    total_rows = len(df)\n",
+    "\n",
+    "    # Mask for Bangkok\n",
+    "    mask = df[province_col].astype(str).str.strip().str.lower() == \"bangkok\"\n",
+    "\n",
+    "    # Rows removed\n",
+    "    removed_rows = df[~mask]\n",
+    "\n",
+    "    # Logging\n",
+    "    print(\"===== Province Filter: Bangkok =====\")\n",
+    "    print(f\"Total rows before filtering : {total_rows}\")\n",
+    "    print(f\"Rows kept (Bangkok)         : {mask.sum()}\")\n",
+    "    print(f\"Rows removed                : {len(removed_rows)}\")\n",
+    "\n",
+    "    if show_removed and len(removed_rows) > 0:\n",
+    "        print(\"\\n--- Rows Removed ---\")\n",
+    "        print(removed_rows[[province_col]])\n",
+    "\n",
+    "    print(\"====================================\\n\")\n",
+    "\n",
+    "    # Return only Bangkok rows\n",
+    "    return df[mask].copy()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4c0ef040",
    "metadata": {},
    "source": [
@@ -163,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 6,
    "id": "91851cc9",
    "metadata": {},
    "outputs": [],
@@ -178,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 7,
    "id": "1277075b",
    "metadata": {},
    "outputs": [
@@ -362,6 +409,28 @@
       "Rows with end < start      : 184\n",
       "Total rows after cleaning  : 7996\n",
       "======================================\n",
+      "\n",
+      "===== Province Filter: Bangkok =====\n",
+      "Total rows before filtering : 7996\n",
+      "Rows kept (Bangkok)         : 6745\n",
+      "Rows removed                : 1251\n",
+      "\n",
+      "--- Rows Removed ---\n",
+      "           province\n",
+      "63      Samutprakan\n",
+      "65      Samutprakan\n",
+      "66      Samutprakan\n",
+      "77       Nonthaburi\n",
+      "97     Samut Prakan\n",
+      "...             ...\n",
+      "11274   Samutprakan\n",
+      "11303    Nonthaburi\n",
+      "11305    Nonthaburi\n",
+      "11350    Nonthaburi\n",
+      "11351    Nonthaburi\n",
+      "\n",
+      "[1251 rows x 1 columns]\n",
+      "====================================\n",
       "\n"
      ]
     }
@@ -376,12 +445,18 @@
     "df = drop_rows_with_nan(df, [\"date\", \"day_of_week\", \"start\", \"end\", \"location\", \"district\", \"province\", \"temp\", \"rain\", \"wind_gust\"])\n",
     "\n",
     "# 2.) add_time_range_and_filter \n",
-    "df_clean = add_time_range_and_filter(df)"
+    "df = add_time_range_and_filter(df)\n",
+    "\n",
+    "# 3.) drop location\n",
+    "df = df.drop(columns='location')\n",
+    "\n",
+    "# 4.) filter just bangkok\n",
+    "df = filter_bangkok(df, show_removed=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 8,
    "id": "4a930470",
    "metadata": {},
    "outputs": [
@@ -389,7 +464,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded 8,180 rows × 10 columns\n"
+      "Loaded 6,745 rows × 10 columns\n"
      ]
     },
     {
@@ -417,12 +492,12 @@
        "      <th>day_of_week</th>\n",
        "      <th>start</th>\n",
        "      <th>end</th>\n",
-       "      <th>location</th>\n",
        "      <th>district</th>\n",
        "      <th>province</th>\n",
        "      <th>temp</th>\n",
        "      <th>rain</th>\n",
        "      <th>wind_gust</th>\n",
+       "      <th>time_range</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -432,12 +507,12 @@
        "      <td>Wednesday</td>\n",
        "      <td>08:30</td>\n",
        "      <td>13:30</td>\n",
-       "      <td>Ram Inthra Road, Siamese Kin Project, Rangsiya...</td>\n",
        "      <td>Kannayao</td>\n",
        "      <td>Bangkok</td>\n",
        "      <td>23.343500</td>\n",
        "      <td>0.0</td>\n",
        "      <td>14.040000</td>\n",
+       "      <td>08:30 - 13:30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>35</th>\n",
@@ -445,12 +520,12 @@
        "      <td>Wednesday</td>\n",
        "      <td>09:00</td>\n",
        "      <td>14:00</td>\n",
-       "      <td>The area along the side of Thawi Watthana Road...</td>\n",
        "      <td>Thawi Watthana</td>\n",
        "      <td>Bangkok</td>\n",
        "      <td>23.343500</td>\n",
        "      <td>0.0</td>\n",
        "      <td>14.040000</td>\n",
+       "      <td>09:00 - 14:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>38</th>\n",
@@ -458,12 +533,12 @@
        "      <td>Monday</td>\n",
        "      <td>09:00</td>\n",
        "      <td>13:00</td>\n",
-       "      <td>The area along the side of Suan Phak Road.</td>\n",
        "      <td>Taling Chan</td>\n",
        "      <td>Bangkok</td>\n",
        "      <td>24.843500</td>\n",
        "      <td>0.0</td>\n",
        "      <td>24.119999</td>\n",
+       "      <td>09:00 - 13:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>41</th>\n",
@@ -471,12 +546,12 @@
        "      <td>Monday</td>\n",
        "      <td>08:30</td>\n",
        "      <td>13:30</td>\n",
-       "      <td>Lat Phrao Road, Soi Lat Phrao 54.</td>\n",
        "      <td>Lat Phrao</td>\n",
        "      <td>Bangkok</td>\n",
        "      <td>25.075998</td>\n",
        "      <td>0.0</td>\n",
        "      <td>24.119999</td>\n",
+       "      <td>08:30 - 13:30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>42</th>\n",
@@ -484,38 +559,31 @@
        "      <td>Sunday</td>\n",
        "      <td>08:00</td>\n",
        "      <td>12:00</td>\n",
-       "      <td>The area along the side of Wisut Kasat Road.</td>\n",
        "      <td>Phra Nakhon</td>\n",
        "      <td>Bangkok</td>\n",
        "      <td>22.893500</td>\n",
        "      <td>0.0</td>\n",
        "      <td>19.800000</td>\n",
+       "      <td>08:00 - 12:00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          date day_of_week  start    end  \\\n",
-       "34  2025-11-26   Wednesday  08:30  13:30   \n",
-       "35  2025-11-26   Wednesday  09:00  14:00   \n",
-       "38  2025-11-24      Monday  09:00  13:00   \n",
-       "41  2025-11-24      Monday  08:30  13:30   \n",
-       "42  2025-11-23      Sunday  08:00  12:00   \n",
+       "          date day_of_week  start    end        district province       temp  \\\n",
+       "34  2025-11-26   Wednesday  08:30  13:30        Kannayao  Bangkok  23.343500   \n",
+       "35  2025-11-26   Wednesday  09:00  14:00  Thawi Watthana  Bangkok  23.343500   \n",
+       "38  2025-11-24      Monday  09:00  13:00     Taling Chan  Bangkok  24.843500   \n",
+       "41  2025-11-24      Monday  08:30  13:30       Lat Phrao  Bangkok  25.075998   \n",
+       "42  2025-11-23      Sunday  08:00  12:00     Phra Nakhon  Bangkok  22.893500   \n",
        "\n",
-       "                                             location        district  \\\n",
-       "34  Ram Inthra Road, Siamese Kin Project, Rangsiya...        Kannayao   \n",
-       "35  The area along the side of Thawi Watthana Road...  Thawi Watthana   \n",
-       "38         The area along the side of Suan Phak Road.     Taling Chan   \n",
-       "41                  Lat Phrao Road, Soi Lat Phrao 54.       Lat Phrao   \n",
-       "42       The area along the side of Wisut Kasat Road.     Phra Nakhon   \n",
-       "\n",
-       "   province       temp  rain  wind_gust  \n",
-       "34  Bangkok  23.343500   0.0  14.040000  \n",
-       "35  Bangkok  23.343500   0.0  14.040000  \n",
-       "38  Bangkok  24.843500   0.0  24.119999  \n",
-       "41  Bangkok  25.075998   0.0  24.119999  \n",
-       "42  Bangkok  22.893500   0.0  19.800000  "
+       "    rain  wind_gust     time_range  \n",
+       "34   0.0  14.040000  08:30 - 13:30  \n",
+       "35   0.0  14.040000  09:00 - 14:00  \n",
+       "38   0.0  24.119999  09:00 - 13:00  \n",
+       "41   0.0  24.119999  08:30 - 13:30  \n",
+       "42   0.0  19.800000  08:00 - 12:00  "
       ]
      },
      "metadata": {},
@@ -528,34 +596,34 @@
       "\n",
       "DataFrame info:\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 8180 entries, 34 to 11354\n",
+      "Index: 6745 entries, 34 to 11354\n",
       "Data columns (total 10 columns):\n",
       " #   Column       Non-Null Count  Dtype  \n",
       "---  ------       --------------  -----  \n",
-      " 0   date         8180 non-null   object \n",
-      " 1   day_of_week  8180 non-null   object \n",
-      " 2   start        8180 non-null   object \n",
-      " 3   end          8180 non-null   object \n",
-      " 4   location     8180 non-null   object \n",
-      " 5   district     8180 non-null   object \n",
-      " 6   province     8180 non-null   object \n",
-      " 7   temp         8180 non-null   float64\n",
-      " 8   rain         8180 non-null   float64\n",
-      " 9   wind_gust    8180 non-null   float64\n",
+      " 0   date         6745 non-null   object \n",
+      " 1   day_of_week  6745 non-null   object \n",
+      " 2   start        6745 non-null   object \n",
+      " 3   end          6745 non-null   object \n",
+      " 4   district     6745 non-null   object \n",
+      " 5   province     6745 non-null   object \n",
+      " 6   temp         6745 non-null   float64\n",
+      " 7   rain         6745 non-null   float64\n",
+      " 8   wind_gust    6745 non-null   float64\n",
+      " 9   time_range   6745 non-null   object \n",
       "dtypes: float64(3), object(7)\n",
-      "memory usage: 703.0+ KB\n",
+      "memory usage: 579.6+ KB\n",
       "\n",
       "Missing values per column:\n",
       "date           0\n",
       "day_of_week    0\n",
       "start          0\n",
       "end            0\n",
-      "location       0\n",
       "district       0\n",
       "province       0\n",
       "temp           0\n",
       "rain           0\n",
       "wind_gust      0\n",
+      "time_range     0\n",
       "dtype: int64\n",
       "----------------------------------------\n"
      ]
@@ -567,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 9,
    "id": "2bb2f737",
    "metadata": {},
    "outputs": [],
