fix path call data

--- a/clean_data/clean_data_scarping.ipynb
+++ b/clean_data/clean_data_scarping.ipynb
@@ -228,13 +228,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "91851cc9",
    "metadata": {},
    "outputs": [],
    "source": [
     "# download data\n",
-    "path = Path(\"./scraping_data.csv\")\n",
+    "path = Path(\"../data/scraping_data.csv\")\n",
     "if not path.exists():\n",
     "    raise FileNotFoundError(f\"{path} not found in {Path.cwd()}\")\n",
     "\n",
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "id": "4308d852",
    "metadata": {},
    "outputs": [
@@ -701,7 +701,7 @@
     "# -------------------------------\n",
     "# Load CSV\n",
     "# -------------------------------\n",
-    "df = pd.read_csv(\"clean_scraping_data.csv\")\n",
+    "df = pd.read_csv(\"../data/clean_scraping_data.csv\")\n",
     "\n",
     "# Convert to minutes\n",
     "df[\"start_minutes\"] = df[\"start\"].apply(time_to_minutes)\n",
