--- a/clean_data/clean_data_traffy.ipynb
+++ b/clean_data/clean_data_traffy.ipynb
@@ -392,13 +392,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "bf2f7804",
    "metadata": {},
    "outputs": [],
    "source": [
     "# download data\n",
-    "path = Path(\"./bangkok_traffy.csv\")\n",
+    "path = Path(\"../data/bangkok_traffy.csv\")\n",
     "if not path.exists():\n",
     "    raise FileNotFoundError(f\"{path} not found in {Path.cwd()}\")\n",
     "\n",
@@ -935,13 +935,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "2d0565a7",
    "metadata": {},
    "outputs": [],
    "source": [
     "# load .csv\n",
-    "df.to_csv(\"clean_data.csv\", index=False, encoding=\"utf-8-sig\")"
+    "df.to_csv(\"../data/clean_data.csv\", index=False, encoding=\"utf-8-sig\")"
    ]
   },
   {
