--- a/clean_data/merge_file.ipynb
+++ b/clean_data/merge_file.ipynb
@@ -10,25 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "762f887e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "f\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"f\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "845a1a23",
    "metadata": {},
    "outputs": [
@@ -62,7 +44,7 @@
     "import os\n",
     "\n",
     "# Folder that contains all your CSV files\n",
-    "folder_path = \"./Scraping_data\"   # <-- change this\n",
+    "folder_path = \"../data/Scraping_data\"\n",
     "\n",
     "# Find all CSV files in the folder\n",
     "csv_files = glob.glob(os.path.join(folder_path, \"*.csv\"))\n",
@@ -80,7 +62,7 @@
     "merged_df = pd.concat(df_list, ignore_index=True)\n",
     "\n",
     "# Save output\n",
-    "output_path = \"scraping_data.csv\"\n",
+    "output_path = \"../data/scraping_data.csv\"\n",
     "merged_df.to_csv(output_path, index=False)\n",
     "\n",
     "print(f\"\\nMerged {len(csv_files)} files into: {output_path}\")\n",
