fix: path of ml

--- a/clean_data/merge_file.ipynb
+++ b/clean_data/merge_file.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "845a1a23",
    "metadata": {},
    "outputs": [
@@ -19,21 +19,21 @@
      "output_type": "stream",
      "text": [
       "Found CSV files:\n",
-      " - ./Scraping_data\\mea_power_outages_page_001_gemini.csv\n",
-      " - ./Scraping_data\\mea_power_outages_page_002_gemini.csv\n",
-      " - ./Scraping_data\\mea_power_outages_page_003_gemini.csv\n",
-      " - ./Scraping_data\\mea_power_outages_page_004_gemini.csv\n",
-      " - ./Scraping_data\\mea_power_outages_page_005_gemini.csv\n",
-      " - ./Scraping_data\\mea_power_outages_page_006_gemini.csv\n",
-      " - ./Scraping_data\\mea_power_outages_page_007_gemini.csv\n",
-      " - ./Scraping_data\\mea_power_outages_page_008_gemini.csv\n",
-      " - ./Scraping_data\\mea_power_outages_page_009_gemini.csv\n",
-      " - ./Scraping_data\\mea_power_outages_page_010_gemini.csv\n",
-      " - ./Scraping_data\\mea_power_outages_page_011_gemini.csv\n",
-      " - ./Scraping_data\\mea_power_outages_page_012_gemini.csv\n",
-      " - ./Scraping_data\\mea_power_outages_page_013_gemini.csv\n",
+      " - ../data/Scraping_data\\mea_power_outages_page_001_gemini.csv\n",
+      " - ../data/Scraping_data\\mea_power_outages_page_002_gemini.csv\n",
+      " - ../data/Scraping_data\\mea_power_outages_page_003_gemini.csv\n",
+      " - ../data/Scraping_data\\mea_power_outages_page_004_gemini.csv\n",
+      " - ../data/Scraping_data\\mea_power_outages_page_005_gemini.csv\n",
+      " - ../data/Scraping_data\\mea_power_outages_page_006_gemini.csv\n",
+      " - ../data/Scraping_data\\mea_power_outages_page_007_gemini.csv\n",
+      " - ../data/Scraping_data\\mea_power_outages_page_008_gemini.csv\n",
+      " - ../data/Scraping_data\\mea_power_outages_page_009_gemini.csv\n",
+      " - ../data/Scraping_data\\mea_power_outages_page_010_gemini.csv\n",
+      " - ../data/Scraping_data\\mea_power_outages_page_011_gemini.csv\n",
+      " - ../data/Scraping_data\\mea_power_outages_page_012_gemini.csv\n",
+      " - ../data/Scraping_data\\mea_power_outages_page_013_gemini.csv\n",
       "\n",
-      "Merged 13 files into: scraping_data.csv\n",
+      "Merged 13 files into: ../data/scraping_data.csv\n",
       "Total rows: 11355\n"
      ]
     }
