fix: model, data, tab3 in visualize

--- a/clean_data/clean_data_traffy.ipynb
+++ b/clean_data/clean_data_traffy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "id": "318c14da",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "fe72ecfe",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "0ac41552",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "d065177e",
    "metadata": {},
    "outputs": [],
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "f4321ffe",
    "metadata": {},
    "outputs": [],
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "6216042b",
    "metadata": {},
    "outputs": [],
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "1041e417",
    "metadata": {},
    "outputs": [],
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "85048a7c",
    "metadata": {},
    "outputs": [],
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "39c5ddd1",
    "metadata": {},
    "outputs": [],
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "bf2f7804",
    "metadata": {},
    "outputs": [],
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "3f562a41",
    "metadata": {},
    "outputs": [
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "c9ffe5af",
    "metadata": {},
    "outputs": [
@@ -757,41 +757,41 @@
       "[solve_days] mean=73.9108, Q1=1.0000, Q3=71.0000, IQR=70.0000, lower=0.0000, upper=211.0000\n",
       "=== ASCENDING SORT ===\n",
       "        solve_days\n",
-      "295920          -1\n",
-      "367246          -1\n",
-      "410774          -1\n",
-      "528415          -1\n",
-      "534478          -1\n",
+      "785960          -1\n",
+      "689500          -1\n",
+      "672094          -1\n",
+      "682425          -1\n",
+      "621476          -1\n",
       "...            ...\n",
-      "786684           0\n",
-      "340              0\n",
-      "786715           0\n",
-      "786714           0\n",
-      "786713           0\n",
+      "476877           0\n",
+      "476882           0\n",
+      "476921           0\n",
+      "476920           0\n",
+      "476919           0\n",
       "\n",
       "[300 rows x 1 columns]\n",
       "=== DESCENDING SORT ===\n",
-      "       solve_days\n",
-      "7            1073\n",
-      "61           1046\n",
-      "29           1021\n",
-      "52           1008\n",
-      "96           1006\n",
-      "77           1004\n",
-      "67            992\n",
-      "110           970\n",
-      "166           962\n",
-      "380           961\n",
-      "136           956\n",
-      "3260          956\n",
-      "832           955\n",
-      "879           955\n",
-      "1545          954\n",
-      "1694          953\n",
-      "8624          952\n",
-      "8623          952\n",
-      "12415         952\n",
-      "8622          952\n",
+      "      solve_days\n",
+      "7           1073\n",
+      "61          1046\n",
+      "29          1021\n",
+      "52          1008\n",
+      "96          1006\n",
+      "77          1004\n",
+      "67           992\n",
+      "110          970\n",
+      "166          962\n",
+      "380          961\n",
+      "136          956\n",
+      "3260         956\n",
+      "832          955\n",
+      "879          955\n",
+      "1545         954\n",
+      "1694         953\n",
+      "8623         952\n",
+      "6548         952\n",
+      "309          952\n",
+      "8624         952\n",
       "count of non-NaN values: 785610\n",
       "number of col over 211.0000:  99586\n",
       "Before eliminating outliers 785610\n",
@@ -826,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "2ef14425",
    "metadata": {},
    "outputs": [
@@ -834,28 +834,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[count_reopen] mean=0.1128, Q1=0.0000, Q3=0.0000, IQR=0.0000, lower=0.0000, upper=2.0000\n",
+      "[count_reopen] mean=0.1128, Q1=0.0000, Q3=0.0000, IQR=0.0000, lower=0.0000, upper=2.0000"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
       "count count_reopen not a 0 & na :  43696 mean not a 0 & na :  1.7699331746612963\n",
       "=== ASCENDING SORT ===\n",
-      "     count_reopen\n",
-      "49              0\n",
-      "55              0\n",
-      "56              0\n",
-      "70              0\n",
-      "80              0\n",
-      "..            ...\n",
-      "646             0\n",
-      "647             0\n",
-      "648             0\n",
-      "649             0\n",
-      "650             0\n",
+      "        count_reopen\n",
+      "8                  0\n",
+      "549266             0\n",
+      "549268             0\n",
+      "549269             0\n",
+      "549273             0\n",
+      "...              ...\n",
+      "549431             0\n",
+      "549432             0\n",
+      "549433             0\n",
+      "549434             0\n",
+      "549435             0\n",
       "\n",
       "[300 rows x 1 columns]\n",
       "=== DESCENDING SORT ===\n",
       "        count_reopen\n",
       "670683            67\n",
-      "624874            65\n",
       "304095            65\n",
+      "624874            65\n",
       "340128            61\n",
       "247441            59\n",
       "660043            58\n",
@@ -863,8 +870,8 @@
       "659926            57\n",
       "315620            53\n",
       "653762            47\n",
-      "346084            45\n",
       "327611            45\n",
+      "346084            45\n",
       "295728            44\n",
       "272219            43\n",
       "326695            43\n",
@@ -911,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "2aaf73be",
    "metadata": {},
    "outputs": [
@@ -921,7 +928,7 @@
        "(679771, 22)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -935,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "2d0565a7",
    "metadata": {},
    "outputs": [],
@@ -946,11 +953,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "12236aab",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before sampling: 679,771 rows\n",
+      "After sampling: 250,000 rows\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Sample data to 100,000 rows\n",
+    "print(f\"Before sampling: {len(df):,} rows\")\n",
+    "\n",
+    "if len(df) > 250000:\n",
+    "    df = df.sample(n=250000, random_state=42)\n",
+    "    print(f\"After sampling: {len(df):,} rows\")\n",
+    "    df.to_csv(\"../data/clean_data_sampled.csv\", index=False, encoding=\"utf-8-sig\")\n",
+    "else:\n",
+    "    print(f\"Data already has {len(df):,} rows (no sampling needed)\")"
+   ]
   }
  ],
  "metadata": {
