--- a/clean_data/clean_data_traffy.ipynb
+++ b/clean_data/clean_data_traffy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "318c14da",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "fe72ecfe",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "0ac41552",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "d065177e",
    "metadata": {},
    "outputs": [],
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "id": "f4321ffe",
    "metadata": {},
    "outputs": [],
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "id": "6216042b",
    "metadata": {},
    "outputs": [],
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "id": "1041e417",
    "metadata": {},
    "outputs": [],
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "id": "85048a7c",
    "metadata": {},
    "outputs": [],
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "id": "39c5ddd1",
    "metadata": {},
    "outputs": [],
@@ -392,13 +392,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "id": "bf2f7804",
    "metadata": {},
    "outputs": [],
    "source": [
     "# download data\n",
-    "path = Path(\"../data/bangkok_traffy.csv\")\n",
+    "path = Path(\"./data/bangkok_traffy.csv\")\n",
     "if not path.exists():\n",
     "    raise FileNotFoundError(f\"{path} not found in {Path.cwd()}\")\n",
     "\n",
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "id": "3f562a41",
    "metadata": {},
    "outputs": [
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "id": "c9ffe5af",
    "metadata": {},
    "outputs": [
@@ -826,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "id": "2ef14425",
    "metadata": {},
    "outputs": [
@@ -834,14 +834,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[count_reopen] mean=0.1128, Q1=0.0000, Q3=0.0000, IQR=0.0000, lower=0.0000, upper=2.0000"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
+      "[count_reopen] mean=0.1128, Q1=0.0000, Q3=0.0000, IQR=0.0000, lower=0.0000, upper=2.0000\n",
       "count count_reopen not a 0 & na :  43696 mean not a 0 & na :  1.7699331746612963\n",
       "=== ASCENDING SORT ===\n",
       "        count_reopen\n",
@@ -918,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 20,
    "id": "2aaf73be",
    "metadata": {},
    "outputs": [
@@ -928,7 +921,7 @@
        "(679771, 22)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -942,18 +935,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 21,
    "id": "2d0565a7",
    "metadata": {},
    "outputs": [],
    "source": [
     "# load .csv\n",
-    "df.to_csv(\"../data/clean_data.csv\", index=False, encoding=\"utf-8-sig\")"
+    "df.to_csv(\"./data/clean_data.csv\", index=False, encoding=\"utf-8-sig\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "12236aab",
    "metadata": {},
    "outputs": [
@@ -981,7 +974,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "DSDE",
+   "display_name": "DSDE-Project",
    "language": "python",
    "name": "python3"
   },
